ajout comparaison temps de calculs cpu seul vs cpu + npu

--- a/exo_model_reg.ipynb
+++ b/exo_model_reg.ipynb
@@ -324,29 +324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from tensorflow.keras.models import load_model\n",
-    "\n",
-    "# # Charger le modèle avec les objets personnalisés\n",
-    "# custom_objects = {\"r2_metric\": r2_metric}\n",
-    "# model_reg_charge = load_model(\n",
-    "#     \"c:/Users/aboys/Documents/Simplon/Cours_Exos/Deep_Learning/Cours/mon_modele_regression.keras\",\n",
-    "#     custom_objects=custom_objects\n",
-    "# )\n",
-    "\n",
-    "# model_reg_charge.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "python -m tf2onnx.convert --saved-model c:/Users/aboys/Documents/Simplon/Cours_Exos/Deep_Learning/Cours/mon_modele_regression --output c:/Users/aboys/Documents/Simplon/Cours_Exos/Deep_Learning/Cours/mon_modele_regression.onnx"
+    "# Commande pour convertir le modèle en modèle onnx :\n",
+    "# python -m tf2onnx.convert --saved-model c:/Users/aboys/Documents/Simplon/Cours_Exos/Deep_Learning/Cours/mon_modele_regression --output c:/Users/aboys/Documents/Simplon/Cours_Exos/Deep_Learning/Cours/mon_modele_regression.onnx"
    ]
   },
   {
@@ -377,8 +360,7 @@
     "output_name = session.get_outputs()[0].name\n",
     "\n",
     "print(f\"Entrée du modèle ONNX : {input_name}\")\n",
-    "# Conversion des données de test au bon type (float32)\n",
-    "x_test_scaled = np.array(x_test_scaled, dtype=np.float32)print(f\"Sortie du modèle ONNX : {output_name}\")"
+    "print(f\"Sortie du modèle ONNX : {output_name}\")"
    ]
   },
   {
@@ -416,6 +398,20 @@
     "print(f\"MAE : {mae_nn}\")\n",
     "print(f\"R² : {r2_nn}\")\n",
     "print(f\"Temps de prédiction : {predict_time_model:.4f} secondes\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comparaisons temps calcul CPU seul vs CPU & NPU :\n",
+    "\n",
+    "| Metric               | CPU seul       | CPU + NPU            |\n",
+    "|-----------------------|----------------|-----------------------|\n",
+    "| **MSE**              | 17.3791        | 17.379103417109224    |\n",
+    "| **MAE**              | 2.6633         | 2.6633474873561487    |\n",
+    "| **R²**               | 0.7912         | 0.7912265743819438    |\n",
+    "| **Temps de prédiction** | 0.1137 secondes | 0.0011 secondes       |"
    ]
   }
  ],
