correction comparaison cpu npu

--- a/exo_model_reg.ipynb
+++ b/exo_model_reg.ipynb
@@ -420,7 +420,7 @@
     "| **MSE**              | 18.2302        | 18.230165430241776    |\n",
     "| **MAE**              | 2.7495         | 2.749545554553761    |\n",
     "| **R²**               | 0.7810        | 0.7810028518094569    |\n",
-    "| **Temps de prédiction** | 0.10.7810condes | 0.0363 secondes       |"
+    "| **Temps de prédiction** | 0.1610 secondes | 0.0363 secondes       |"
    ]
   }
  ],
