--- a/exo_model_reg.ipynb
+++ b/exo_model_reg.ipynb
@@ -413,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparaisons temps calcul CPU seul vs CPU & NPU :\n",
+    "# Comparaisons temps de calcul CPU seul vs CPU + NPU :\n",
     "\n",
     "| Metric               | CPU seul       | CPU + NPU            |\n",
     "|-----------------------|----------------|-----------------------|\n",
